--- a/PPTT/Pages/Administradores/Index.cshtml
+++ b/PPTT/Pages/Administradores/Index.cshtml
@@ -2,7 +2,7 @@
 @model PPTT.Pages.Administradores.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ABM USUARIOS";
 }
 
 <h1>Index</h1>
