Cambio en los botones
ahora los botones redireccionan al menu luego de enviar el formulario

Co-Authored-By: Tadeo Abalos <128402901+tadeoabalos@users.noreply.github.com>

--- a/PPTT/Pages/Vistas/Orden.cshtml
+++ b/PPTT/Pages/Vistas/Orden.cshtml
@@ -197,7 +197,7 @@
                 <textarea id="observacion" name="Observacion" class="custom-textarea" required></textarea>
             </div>
             <div>
-                <input type="submit" value="Enviar" class="submit" />
+                <input type="submit" value="Enviar" class="submit">
             </div>
         </fieldset>
     </form>
