Agregar Botones y fixes
"

Co-Authored-By: Tadeo Abalos <128402901+tadeoabalos@users.noreply.github.com>

--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -68,6 +68,9 @@
 </form>
 <div class="text-center">
     <h3>Sistema de pedido de trabajos de la fuerza aerea</h3>
-    <a asp-page="./Create">ABM USUARIOS</a>
-
+    <a href="/Administradores/Create" class="submit">ABM USUARIOS Crear</a>
+    <a href="/Administradores/Delete" class="submit">ABM USUARIOS Borrar</a>
+    <a href="/Administradores/Details" class="submit">ABM USUARIOS Detalles</a>
+    <a href="/Administradores/Edits" class="submit">ABM USUARIOS Editar</a>
+    <a href="/Administradores/Index" class="submit">ABM USUARIOS Index</a>
 </div>
