MAS BOTONES y FIXES
"

Co-Authored-By: Tadeo Abalos <128402901+tadeoabalos@users.noreply.github.com>

--- a/PPTT/Pages/Vistas/IngresoPersonal.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPersonal.cshtml
@@ -123,3 +123,4 @@
         <a href="/Vistas/IngresoPrimeraVez" class="submit">Registrarse</a>
     </div>
 </body>
+<a href="/Index" class="submit">Volver al Menu</a>
