--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -62,9 +62,11 @@
         }
 </style>
 <form method="get">
-    <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
     <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
-
+    <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajo Asignado</a>
+    <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
+    <a href="/Administradores/VerPedidosTrabajo" class="submit">Ver Pedidos de Trabajo</a>
+    <a href="/Administradores/Estadistica" class="submit">Estadisticas</a>
 </form>
 <div class="text-center">
     <h3>Sistema de pedido de trabajos de la fuerza aerea</h3>
