--- a/PPTT/Pages/Administradores/Delete.cshtml
+++ b/PPTT/Pages/Administradores/Delete.cshtml
@@ -43,16 +43,16 @@
             @Html.DisplayFor(model => model.Admin.Email)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.Division)
+            @Html.DisplayNameFor(model => model.Admin.DivisionFk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.Division)
+            @Html.DisplayFor(model => model.Admin.DivisionFk)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.Servicio)
+            @Html.DisplayNameFor(model => model.Admin.ServicioFk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.Servicio)
+            @Html.DisplayFor(model => model.Admin.ServicioFk)
         </dd>
     </dl>
     
