--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -37,6 +37,8 @@
                 <input asp-for="Admin.Email" class="form-control" />
                 <span asp-validation-for="Admin.Email" class="text-danger"></span>
             </div>
+            @{/*/////////////  CARGAR DINAMICAMENTE LOS DATOS DE LA BASE DE DATOS  /////////////*/}
+                            @{/*/////////////  DIVISIÓN  /////////////*/}
             <div class="form-group">
                 <label asp-for="Admin.DivisionFk" class="control-label"></label>
                 <select asp-for="Admin.DivisionFk"
@@ -47,6 +49,8 @@
                 </select>
                 <span asp-validation-for="Admin.DivisionFk" class="text-danger"></span>
             </div>
+            @{/*/////////////  CARGAR DINAMICAMENTE LOS DATOS DE LA BASE DE DATOS  /////////////*/}
+                            @{/*/////////////  SERVICIO  /////////////*/}
             <div class="form-group">
                 <label asp-for="Admin.ServicioFk" id="servicioLabel"  class="control-label"></label>
                 <br/>
@@ -99,7 +103,7 @@
                                 servicioSelect.append('<option value="">' + servicio.text + '</option>')
                             })
                             $('#servicioLabel').fadeIn(500);
-                            $('#servicioSelect').fadeIn(500);
+                            $('#servicioSelect').fadeIn(550);
                         }
                     })
                 }
