--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Vistas/Orden">Cargar Pedido de Trabajo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Vistas/Empleados">Cargar Empleados</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Administradores/Empleados">Cargar Empleados</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Vistas/IngresoPersonal">Ingreso Personal</a>
