--- a/PPTT/Pages/Administradores/Estadistica.cshtml
+++ b/PPTT/Pages/Administradores/Estadistica.cshtml
@@ -60,4 +60,4 @@
             transform: scale(1);
         }
 </style>
-<a href="/Index" class="submit">Volver al Menu</a>
+<a href="/Administradores/Menu" class="submit">Volver al Menu</a>
