--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -63,16 +63,6 @@
 </style>
 <form method="get">
     <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
-    <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajo Asignado</a>
     <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
-    <a href="/Administradores/VerPedidosTrabajo" class="submit">Ver Pedidos de Trabajo</a>
-    <a href="/Administradores/Estadistica" class="submit">Estadisticas</a>
+    <a href="/Vistas/IngresoPrimeraVez" class="submit">Registrarse</a>
 </form>
-<div class="text-center">
-    <h3>Sistema de pedido de trabajos de la fuerza aerea</h3>
-    <a href="/Administradores/Create" class="submit">ABM USUARIOS Crear</a>
-    <a href="/Administradores/Delete" class="submit">ABM USUARIOS Borrar</a>
-    <a href="/Administradores/Details" class="submit">ABM USUARIOS Detalles</a>
-    <a href="/Administradores/Edits" class="submit">ABM USUARIOS Editar</a>
-    <a href="/Administradores/Index" class="submit">ABM USUARIOS Index</a>
-</div>
