--- a/PPTT/Pages/Administradores/Menu.cshtml
+++ b/PPTT/Pages/Administradores/Menu.cshtml
@@ -2,3 +2,78 @@
 @model PPTT.Pages.Administradores.MenuModel
 @{
 }
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f8ff;
+        color: #003d6b;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+
+    .header {
+        padding: 20px;
+    }
+
+    .main-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 80px);
+        flex-direction: column;
+    }
+
+    .form-container {
+        width: 60%;
+        padding: 20px;
+        background-color: #e0e8f1;
+        border: 1px solid #003d6b;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+        display: inline-block;
+    }
+
+    .submit {
+        background-color: #003d6b;
+        color: white;
+        padding: 15px 30px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 1.2em;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 10px;
+        transition: background-color 0.3s, transform 0.2s;
+        font-weight: bold;
+    }
+
+        .submit:hover {
+            background-color: #002e5d;
+            transform: scale(1.05);
+        }
+
+        .submit:active {
+            background-color: #001f3f;
+            transform: scale(1);
+        }
+</style>
+<form method="get">
+    <h3>USUARIO</h3>
+    <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
+    <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajo Asignado</a>
+    <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
+    <a href="/Vistas/IngresoPrimeraVez" class="submit">Registrarse</a>
+    <a href="/Vistas/DatosPersonales" class="submit">Cargar Datos Personales</a>
+
+</form>
+<div class="text-center">
+    <h3>ADMIN</h3>
+    <a href="/Administradores/VerPedidosTrabajo" class="submit">Ver Pedidos de Trabajo</a>
+    <a href="/Administradores/Estadistica" class="submit">Estadisticas</a>
+    <a href="/Administradores/Edits" class="submit">ABM USUARIOS Editar</a>
+    <a href="/Administradores/Index" class="submit">ABM USUARIOS Index</a>
+</div>
+
