arregle el login despues de cambiar la bd
"

--- a/PPTT/Pages/Administradores/Menu.cshtml
+++ b/PPTT/Pages/Administradores/Menu.cshtml
@@ -73,6 +73,7 @@
     <h3>ADMIN</h3>
     <a href="/Administradores/VerPedidosTrabajo" class="submit">Ver Pedidos de Trabajo</a>
     <a href="/Administradores/Estadistica" class="submit">Estadisticas</a>
+    <a href="/Administradores/Empleados" class="submit">Empleados</a>
     <a href="/Administradores/Edits" class="submit">ABM USUARIOS Editar</a>
     <a href="/Administradores/Index" class="submit">ABM USUARIOS Index</a>
 </div>
