--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -26,7 +26,7 @@
                 <label asp-for="Admin.Dni" class="control-label"></label>
                 <input asp-for="Admin.Dni" class="form-control" />
                 <span asp-validation-for="Admin.Dni" class="text-danger"></span>
-            </div>
+            </div>         
             <div class="form-group">
                 <label asp-for="Admin.NumeroControl" class="control-label"></label>
                 <input asp-for="Admin.NumeroControl" class="form-control" />
@@ -36,21 +36,21 @@
                 <label asp-for="Admin.Email" class="control-label"></label>
                 <input asp-for="Admin.Email" class="form-control" />
                 <span asp-validation-for="Admin.Email" class="text-danger"></span>
-            </div>
-            @{/*/////////////  CARGAR DINAMICAMENTE LOS DATOS DE LA BASE DE DATOS  /////////////*/}
-                            @{/*/////////////  DIVISIÓN  /////////////*/}
+            </div>           
             <div class="form-group">
                 <label asp-for="Admin.DivisionFk" class="control-label"></label>
                 <select asp-for="Admin.DivisionFk"
-                        asp-items="Html.GetEnumSelectList<Models.DeptoEnum>()"
+                        asp-items="Model.Divisions.Select(d=> new SelectListItem
+                        {
+                            Value = d.ID_Division.ToString(),
+                            Text = d.Nombre_Division
+                        })"
                         id="deptSelect"
                         class="formControl">
                     <option hidden selected value="">Seleccione el Organismo</option>
                 </select>
                 <span asp-validation-for="Admin.DivisionFk" class="text-danger"></span>
-            </div>
-            @{/*/////////////  CARGAR DINAMICAMENTE LOS DATOS DE LA BASE DE DATOS  /////////////*/}
-                            @{/*/////////////  SERVICIO  /////////////*/}
+            </div>            
             <div class="form-group">
                 <label asp-for="Admin.ServicioFk" id="servicioLabel"  class="control-label"></label>
                 <br/>
@@ -87,23 +87,22 @@
                 if (selectedDivision) 
                 {
                     $.ajax({
-                        url: '@Url.Page("./Create", "ServiciosByDivision")', //Aca esta el problema creo yo
-                        type: 'GET', //Type correcto?
+                        url: '@Url.Page("./Create", "ServiciosByDivision")', 
+                        type: 'GET', 
                         data: {division: selectedDivision},
                         success: function (data) 
                         {
-                            console.log(selectedDivision); // ¡¡¡ EL TIPO DE DATO ES STRING !!!
+                            console.log("El tipo de dato es " + typeof(selectedDivision)); // El tipo de dato recibido es string
                             var servicioSelect = $('#servicioSelect');
                             servicioSelect.empty();
-                            servicioSelect.append('<option hidden select value = "">Seleccione el servicio correspondiente</option>                            < /select>')
-                            console.log(data)
-                            //Cannot use 'in' operator to search for 'length' -> Se le pasan valores null o undefined al $.each
+                            servicioSelect.append('<option hidden select value = "">Seleccione el servicio correspondiente</option>< /select>')                                                      
+                            console.log(data);
                             $.each(data, function (index, servicio) 
                             {
-                                servicioSelect.append('<option value="">' + servicio.text + '</option>')
+                                servicioSelect.append('<option value="' + servicio.iD_Servicio + '">' + servicio.nombre_Servicio + '</option>')
                             })
                             $('#servicioLabel').fadeIn(500);
-                            $('#servicioSelect').fadeIn(550);
+                            $('#servicioSelect').fadeIn(500);
                         }
                     })
                 }
