implemente el  return back en orden
"

--- a/PPTT/Pages/Vistas/IngresoPersonal.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPersonal.cshtml
@@ -120,7 +120,9 @@
         </fieldset>
     </form>
     <div class="centered-button">
-        <a href="/Vistas/IngresoPrimeraVez" class="submit">Registrarse</a>
+        <a href="/Vistas/OlvideContraseña" class="submit">Olvide Mi Contraseña</a>
+    </div>
+    <div class="centered-button">
+        <a href="/Vistas/IngresoPrimeraVez" class="submit">Cambiar Mi Contraseña</a>
     </div>
 </body>
-<a href="/Index" class="submit">Volver al Menu</a>
