--- a/PPTT/Pages/Administradores/Menu.cshtml
+++ b/PPTT/Pages/Administradores/Menu.cshtml
@@ -75,6 +75,7 @@
     <a href="/Administradores/Estadistica" class="submit">Estadisticas</a>
     <a href="/Administradores/Empleados" class="submit">Empleados</a>
     <a href="/Administradores/Edits" class="submit">ABM USUARIOS Editar</a>
-    <a href="/Administradores/Index" class="submit">ABM USUARIOS Index</a>
+    <a href="/Administradores/Index" class="submit">ABM 
+        S Index</a>
 </div>
 
