ingreso primera vez funcional
"

--- a/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
@@ -121,7 +121,7 @@
             </div>
             <div>
                 <label for="Numero de Control">Numero de Control:</label>
-                <input type="text" id="Numero de Control" name="NumerodeControl " value="" required />
+                <input type="text" asp-for="NumeroDeControl" id="NumeroDeControl" name="NumeroDeControl " value="" required />
             </div>
             <div>
                 <label for="ViejaContraseña">Contraseña Anterior:</label>
