se redirigue al logeado a otra pagina y no a la principal

--- a/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
@@ -114,7 +114,7 @@
 <body>
     <form method="post" id="IngresoPrimeraVez">
         <fieldset>
-            <legend>Ingreso Personal Primera Vez</legend>
+            <legend>Cambiar Contraseña</legend>
             <div>
                 <label for="DNI">DNI:</label>
                 <input type="text" id="DNI" name="DNI" value="" required />
