se mantiene la sesion si se cambia la contraseña
"

--- a/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
@@ -96,6 +96,7 @@
 </style>
 
 <script>
+//solo permito enviar el formulario si las contraseñas coinciden
     document.addEventListener("DOMContentLoaded", function () {
         var form = document.getElementById("IngresoPrimeraVez");
 
