--- a/PPTT/Pages/Vistas/YaLog.cshtml
+++ b/PPTT/Pages/Vistas/YaLog.cshtml
@@ -9,29 +9,48 @@
         color: #003d6b;
         margin: 0;
         padding: 0;
-        text-align: center;
     }
 
-    .header {
-        padding: 20px;
+    fieldset {
+        border: none;
+        padding: 0;
+        margin: 0;
     }
 
-    .main-content {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: calc(100vh - 80px);
-        flex-direction: column;
+    legend {
+        font-size: 1.2em;
+        color: #003d6b;
+        margin-bottom: 10px;
+        font-weight: bold;
     }
 
-    .form-container {
-        width: 60%;
-        padding: 20px;
-        background-color: #e0e8f1;
+    label,
+    input[type="text"],
+    select,
+    .submit,
+    h4 {
+        font-size: 1em;
+        font-weight: bold;
+    }
+
+    input[type="password"],
+    select {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
         border: 1px solid #003d6b;
-        border-radius: 8px;
-        box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
-        display: inline-block;
+        border-radius: 4px;
+        background-color: white;
+    }
+
+    input[type="text"],
+    select {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #003d6b;
+        border-radius: 4px;
+        background-color: white;
     }
 
     .submit {
@@ -59,7 +78,18 @@
             background-color: #001f3f;
             transform: scale(1);
         }
+
+    .centered-button {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
 </style>
+<div class="centered-button">
 <form method="post">
-    <button type="submit">Cerrar Sesion</button>
+    <input type="submit" value="Cerrar Sesion" class="submit" />
 </form>
+</div>
+<div class="centered-button">
+    <a href="/Index" class="submit">Volver al Inicio</a>
+</div>
