--- a/PPTT/Pages/Vistas/Orden.cshtml
+++ b/PPTT/Pages/Vistas/Orden.cshtml
@@ -55,7 +55,7 @@
     }
 
     h4, label {
-        margin-bottom: 5px; /* Ajuste de margen inferior para consistencia */
+        margin-bottom: 5px; 
     }
 
     .submit {
