--- a/PPTT/Pages/Vistas/YaLog.cshtml
+++ b/PPTT/Pages/Vistas/YaLog.cshtml
@@ -85,11 +85,17 @@
         margin-top: 20px;
     }
 </style>
+<script>
+    function handleSubmit() {
+        window.history.back();
+        return true;
+    }
+</script>
 <div class="centered-button">
 <form method="post">
     <input type="submit" value="Cerrar Sesion" class="submit" />
 </form>
 </div>
 <div class="centered-button">
-    <a href="/Index" class="submit">Volver al Inicio</a>
+    <a href="Visitas/MenuLog">Volver al Inicio</a>
 </div>
